--- a/好文章推荐.md
+++ b/好文章推荐.md
@@ -58,15 +58,13 @@ http:\/\/www.cocoachina.com\/bbs\/read.php?tid=318513
 
 http:\/\/www.cnblogs.com\/lingyunhu\/p\/4004528.html \/\/web RTC
 
+
+
+# webrtc
+
 ninjanetic.com\/how-to-get-started-with-webrtc-and-ios-without-wasting-10-hours-of-your-life
 
 http:\/\/blog.it985.com\/7654.html
-
-if \(\[self.navigationController respondsToSelector:@selector\(interactivePopGestureRecognizer\)\]\) {
-
-self.navigationController.interactivePopGestureRecognizer.enabled = NO;
-
-}
 
 
 
