--- a/好文章推荐.md
+++ b/好文章推荐.md
@@ -58,19 +58,17 @@ http:\/\/www.cocoachina.com\/bbs\/read.php?tid=318513
 
 http:\/\/www.cnblogs.com\/lingyunhu\/p\/4004528.html \/\/web RTC
 
-
-
 # webrtc
 
 ninjanetic.com\/how-to-get-started-with-webrtc-and-ios-without-wasting-10-hours-of-your-life
 
-http:\/\/blog.it985.com\/7654.html
 
 
+RunLoop
 
 https:\/\/developer.apple.com\/library\/content\/documentation\/Cocoa\/Conceptual\/Multithreading\/RunLoopManagement\/RunLoopManagement.html\#\/\/apple\_ref\/doc\/uid\/10000057i-CH16-SW25
 
-sublime text
+
 
 http:\/\/morning.work\/page\/2016-03\/sublime-text-for-nodejs-es2015-development.html?utm\_source=tuicool&utm\_medium=referral
 
