--- a/好文章推荐.md
+++ b/好文章推荐.md
@@ -2,69 +2,69 @@
 
 ## xcode 插件
 
-http:\/\/www.cocoachina.com\/ios\/20150713\/12503.html \/\/ios插件
+`http://www.cocoachina.com/ios/20150713/12503.html //ios插件`
 
-http:\/\/www.cocoachina.com\/industry\/20140527\/8565.html \/\/pop animation
+`http://www.cocoachina.com/industry/20140527/8565.html //pop animation`
 
-http:\/\/www.cocoachina.com\/ios\/20150715\/12540.html \/\/runtime
+`http://www.cocoachina.com/ios/20150715/12540.html //runtime`
 
-http:\/\/www.tuicool.com\/articles\/FfEBRf7 \/\/cgcontext
+`http://www.tuicool.com/articles/FfEBRf7 //cgcontext`
 
-http:\/\/www.cnblogs.com\/pengyingh\/articles\/2396032.html \/\/cor animation
+`http://www.cnblogs.com/pengyingh/articles/2396032.html //cor animation`
 
 ## auto layout
 
-http:\/\/xuexuefeng.com\/autolayout\/ \/\/auto layout vincent个人网站。写的很好！
+`http://xuexuefeng.com/autolayout/ `
 
 ## core animation
 
-http:\/\/www.cocoachina.com\/ios\/20150104\/10814.html \/\/core animation 详解
+`http://www.cocoachina.com/ios/20150104/10814.html //core animation 详解`
 
-http:\/\/www.cocoachina.com\/ios\/20150104\/10816.html
+`http://www.cocoachina.com/ios/20150104/10816.html`
 
-http:\/\/www.cocoachina.com\/ios\/20150105\/10827.html
+`http://www.cocoachina.com/ios/20150105/10827.html`
 
-http:\/\/www.cocoachina.com\/ios\/20150105\/10812.html
+`http://www.cocoachina.com/ios/20150105/10812.html`
 
-http:\/\/www.cocoachina.com\/ios\/20150105\/10829.html
+`http://www.cocoachina.com/ios/20150105/10829.html`
 
-http:\/\/www.cocoachina.com\/ios\/20150106\/10839.html
+`http://www.cocoachina.com/ios/20150106/10839.html`
 
-http:\/\/www.cocoachina.com\/ios\/20150106\/10840.html
+`http://www.cocoachina.com/ios/20150106/10840.html`
 
 ## 转场动画
 
-http:\/\/www.cocoachina.com\/ios\/20150719\/12600.html \/\/自定义转场动画
+`http://www.cocoachina.com/ios/20150719/12600.html //自定义转场动画`
 
-http:\/\/www.cocoachina.com\/ios\/20150727\/12720.html \/\/加快开发进度
+`http://www.cocoachina.com/ios/20150727/12720.html //加快开发进度`
 
-http:\/\/www.cocoachina.com\/ios\/20150605\/11998.html \/\/遮罩转场
+`http://www.cocoachina.com/ios/20150605/11998.html //遮罩转场`
 
 ## open Gl
 
-http:\/\/www.cocoachina.com\/game\/20150811\/12969.html \/\/opengl
+`http://www.cocoachina.com/game/20150811/12969.html //opengl`
 
 ## audio session
 
-http:\/\/www.cocoachina.com\/ios\/20140717\/9162.html \/\/音频
+`http://www.cocoachina.com/ios/20140717/9162.html //音频`
 
-http:\/\/blog.csdn.net\/nogodoss\/article\/details\/10535729 \/\/音频录制
+`http://blog.csdn.net/nogodoss/article/details/10535729 //音频录制`
 
 ## 创意
 
-https:\/\/github.com\/devSC\/WSProgressHUD
+`https://github.com/devSC/WSProgressHUD`
 
-http:\/\/www.cocoachina.com\/bbs\/read.php?tid=318513
+`http://www.cocoachina.com/bbs/read.php?tid=318513`
 
-http:\/\/www.cnblogs.com\/lingyunhu\/p\/4004528.html \/\/web RTC
+`http://www.cnblogs.com/lingyunhu/p/4004528.html //web RTC`
 
 # webrtc
 
-ninjanetic.com\/how-to-get-started-with-webrtc-and-ios-without-wasting-10-hours-of-your-life
+`ninjanetic.com/how-to-get-started-with-webrtc-and-ios-without-wasting-10-hours-of-your-life`
 
 ## RunLoop
 
-https:\/\/developer.apple.com\/library\/content\/documentation\/Cocoa\/Conceptual\/Multithreading\/RunLoopManagement\/RunLoopManagement.html\#\/\/apple\_ref\/doc\/uid\/10000057i-CH16-SW25
+`https://developer.apple.com/library/content/documentation/Cocoa/Conceptual/Multithreading/RunLoopManagement/RunLoopManagement.html#//apple_ref/doc/uid/10000057i-CH16-SW25`
 
-http:\/\/morning.work\/page\/2016-03\/sublime-text-for-nodejs-es2015-development.html?utm\_source=tuicool&utm\_medium=referral
+`http://morning.work/page/2016-03/sublime-text-for-nodejs-es2015-development.html?utm_source=tuicool&utm_medium=referral`
 
