--- a/开发日志.md
+++ b/开发日志.md
@@ -1,2 +1,27 @@
-https:\/\/www.qcloud.com\/document\/product\/454\/6948
+# 开发日志
+
+* ### callkit:
+
+
+          iOS 10 出现的针对呼叫过滤的框架。
+
+* ### 证书:
+
+
+          证书的概念、原理、使用。
+
+* ### pushkit:
+
+
+           推送（voippush）。
+
+* ### coredata:
+
+
+           iOS 的持久化方案。
+
+* ### replaykit:
+
+
+           iOS 录屏、直播方案。
 
