--- a/开发日志.md
+++ b/开发日志.md
@@ -1,16 +1,16 @@
 # 开发日志
 
-* ### [Callkit](#<CallKit简介>):
+* ### [Callkit](callkit.md):
 
 
           iOS 10 出现的针对呼叫过滤的框架。
 
-* ### [证书](#<证书>):
+* ### [证书](证书.md):
 
 
           证书的概念、原理、使用。
 
-* ### [Pushkit](#< Push Kit 使用>):
+* ### [Pushkit](Push Kit 使用.md):
 
 
            推送（voippush）。
