--- a/开发日志.md
+++ b/开发日志.md
@@ -15,12 +15,12 @@
 
            推送（voippush）。
 
-* ### [CoreData](#<Core Data>):
+* ### [CoreData](coredata.md):
 
 
            iOS 的持久化方案。
 
-* ### [Replaykit](#< ReplayKit 使用>):
+* ### [Replaykit](relaykit.md):
 
 
            iOS 录屏、直播方案。
