--- a/屏幕直播技术.md
+++ b/屏幕直播技术.md
@@ -2,7 +2,23 @@
 
 根据目前市场上对手游直播的方案分析，选择屏幕的直播方案有两种。
 
-1.ReplayKit Live
+1.[ReplayKit Live](relaykit.md)
 
-relaykit.md
+2.Airplay mirroring
+
+
+
+Replaykit ：
+
+> 这个是苹果提供的屏幕流采集方案，iOS 10 推出。需要被录制的 app 集成该功能。而且 replaykit 的稳定性不好。经过测试，在 iphone 5s 上经常会出现采集进程crash 的情况。而在iphone6 iPad air2 等机型上稳定。这个用来做直播有很大的限制性。需要相关app 的厂商添加一个 只在 iOS 10 上才有的功能。这个对于很多厂商来说其实没有动力去做。
+
+Airplay
+
+> 这个就比较好用了。但是必须使用私有api。并且对苹果的airplay 数据进行破解解密，这一点的难度其实很大。而且同时只能使用企业证书。而使用企业证书就会面临在用户多的情况下会被苹果发现\(企业证书原则上只能在企业内部使用\)。
+
+[相关的私有api](https://spin.atomicobject.com/2012/04/23/ios-mirroring-and-programmatic-airplay-selection/)
+
+
+
+
 
