--- a/屏幕直播技术.md
+++ b/屏幕直播技术.md
@@ -1,12 +1,10 @@
 # 屏幕直播技术
 
-根据目前市场上对手游直播的方案分析，选择屏幕的直播方案有两种。
+根据目前市场上对手游直播的方案分析，选择屏幕的采集方案有两种。
 
 1.[ReplayKit Live](relaykit.md)
 
 2.Airplay mirroring
-
-
 
 Replaykit ：
 
@@ -17,8 +15,4 @@ Airplay
 > 这个就比较好用了。但是必须使用私有api。并且对苹果的airplay 数据进行破解解密，这一点的难度其实很大。而且同时只能使用企业证书。而使用企业证书就会面临在用户多的情况下会被苹果发现\(企业证书原则上只能在企业内部使用\)。
 
 [相关的私有api](https://spin.atomicobject.com/2012/04/23/ios-mirroring-and-programmatic-airplay-selection/)
-
-
-
-
 
