--- a/开发日志.md
+++ b/开发日志.md
@@ -46,3 +46,11 @@
 ```
 
 * ### [本地化字串](ben-di-hua-zi-chuan.md)
+```
+国际化文字方案
+```
+
+* ### [Universal-Link](universal-link.md)
+```
+web唤醒应用方案
+```
